--- a/Grow.Server/wwwroot/css/frontend.css
+++ b/Grow.Server/wwwroot/css/frontend.css
@@ -1,5 +1,5 @@
 ﻿@import url("/css/font-awesome.min.css");
-@import url("https://fonts.googleapis.com/css?family=Lato:300,400,900");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,900");
 @import url("https://fonts.googleapis.com/css?family=Philosopher:400");
 @import url("https://fonts.googleapis.com/css?family=Space+Mono");
 /*
@@ -1025,7 +1025,7 @@ body {
 
 body, input, select, textarea {
   color: #7c8081;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 15pt;
   font-weight: 300;
   letter-spacing: 0.025em;
@@ -1043,7 +1043,7 @@ a {
     border-bottom-color: transparent; }
 
 strong, b {
-  font-weight: 400; }
+  font-weight: 900; }
 
 p, ul, ol, dl, table {
   margin: 0 0 2em 0; }
