--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -5,6 +5,56 @@
     ViewBag.TransparentNavbar = true;
 }
 
+@section Scripts {
+    <script>
+        
+        function getTimeRemaining(endtime) {
+            var t = Date.parse(endtime.) - Date.now();
+            var seconds = Math.floor((t / 1000) % 60);
+            var minutes = Math.floor((t / 1000 / 60) % 60);
+            var hours = Math.floor((t / (1000 * 60 * 60)) % 24);
+            var days = Math.floor(t / (1000 * 60 * 60 * 24));
+            return {
+                'total': t,
+                'days': days,
+                'hours': hours,
+                'minutes': minutes,
+                'seconds': seconds
+            };
+        }
+
+        function initializeClock(id, endtime) {
+            var clock = document.getElementById(id);
+            if (!clock || !endtime) return;
+            var daysSpan = clock.querySelector('.days');
+            var hoursSpan = clock.querySelector('.hours');
+            var minutesSpan = clock.querySelector('.minutes');
+            var secondsSpan = clock.querySelector('.seconds');
+
+            function updateClock() {
+                var t = getTimeRemaining(endtime);
+
+                daysSpan.innerHTML = t.days;
+                hoursSpan.innerHTML = ('0' + t.hours).slice(-2);
+                minutesSpan.innerHTML = ('0' + t.minutes).slice(-2);
+                secondsSpan.innerHTML = ('0' + t.seconds).slice(-2);
+
+                if (t.total <= 0) {
+                    clearInterval(timeinterval);
+                }
+            }
+
+            updateClock();
+            var timeinterval = setInterval(updateClock, 1000);
+        }
+        
+        var contestStart = new Date('@Model.ContestStart.ToString("yyyy'-'MM'-'dd'T'HH':'mm':'ss'.'fff'Z'")');
+        contestStart.setTime(contestStart.getTime() + contestStart.getTimezoneOffset() * 60 * 1000);
+        initializeClock('clockdiv', contestStart);
+
+    </script>
+}
+
 <section id="banner">
     <div class="inner">
         <header>
@@ -15,12 +65,9 @@
     @if (Model.IsBeforeContest)
     {
         // countdown
-        var timeLeft = Model.ContestStart - DateTime.UtcNow;
+        var timeLeft = Model.ContestStart - DateTime.Now;
         <h2>
-            GROW @Model.Contest.Year is starting soon<br />
-            <script>
-                var contestStart = new Date('@Model.ContestStart.ToString("yyyy'-'MM'-'dd'T'HH':'mm':'ss'.'fff'Z'")');
-            </script>
+            GROW @Model.Contest.Year is starting soon:<br />
             <div id="clockdiv">
                 <div>
                     <span class="days">@timeLeft.Days.ToString("#00")</span>
