Made new database fields from last commit editable in the admin backend

--- a/Grow.Server/Areas/Admin/Views/Contests/Create.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Contests/Create.cshtml
@@ -37,6 +37,11 @@
                 <span asp-validation-for="RegistrationUrl" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="RegistrationDeadline" class="control-label"></label>
+                <input asp-for="RegistrationDeadline" class="form-control" />
+                <span asp-validation-for="RegistrationDeadline" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <div class="checkbox">
                     <label>
                         <input asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
