--- a/Grow.Server/Areas/Admin/Views/Partners/Create.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Partners/Create.cshtml
@@ -34,6 +34,13 @@
             <div class="form-group">
                 <div class="checkbox">
                     <label>
+                        <input asp-for="IsAdvertised" /> Display as main partner on frontpage
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="checkbox">
+                    <label>
                         <input asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
                     </label>
                 </div>
