--- a/Grow.Server/Areas/Admin/Views/Contests/Details.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Contests/Details.cshtml
@@ -44,6 +44,14 @@
         </tr>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.RegistrationDeadline)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.RegistrationDeadline)
+            </td>
+        </tr>
+        <tr>
+            <th>
                 @Html.DisplayNameFor(model => model.CreatedAt)
             </th>
             <td>
