--- a/Grow.Server/Areas/Admin/Views/Partners/Details.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Partners/Details.cshtml
@@ -36,6 +36,14 @@
         </tr>
         <tr>
             <th>
+                Is main partner?
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.IsAdvertised)
+            </td>
+        </tr>
+        <tr>
+            <th>
                 @Html.DisplayNameFor(model => model.CreatedAt)
             </th>
             <td>
