--- a/Grow.Server/Areas/Admin/Views/Partners/Index.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Partners/Index.cshtml
@@ -18,6 +18,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
+            <th>
+                Main Partner?
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -30,6 +33,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IsAdvertised)
             </td>
             <partial name="Partials/_OptionCell" model="item" />
         </tr>
