--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     <script>
         
         function getTimeRemaining(endtime) {
-            var t = Date.parse(endtime.) - Date.now();
+            var t = endtime.getTime() - Date.now();
             var seconds = Math.floor((t / 1000) % 60);
             var minutes = Math.floor((t / 1000 / 60) % 60);
             var hours = Math.floor((t / (1000 * 60 * 60)) % 24);
@@ -48,7 +48,7 @@
             var timeinterval = setInterval(updateClock, 1000);
         }
         
-        var contestStart = new Date('@Model.ContestStart.ToString("yyyy'-'MM'-'dd'T'HH':'mm':'ss'.'fff'Z'")');
+        var contestStart = new Date('@Model.ContestStart.ToUniversalTime().ToString("yyyy'-'MM'-'dd'T'HH':'mm':'ss'.'fff'Z'")');
         contestStart.setTime(contestStart.getTime() + contestStart.getTimezoneOffset() * 60 * 1000);
         initializeClock('clockdiv', contestStart);
 
@@ -56,10 +56,10 @@
 }
 
 <section id="banner">
-    <div class="inner">
-        <header>
-            <h2><img src="/img/grow_logo.png" alt="GROW" /></h2>
-        </header>
+    <div id="inner">
+        <div class="video-wrapper">
+            <iframe width="600" height="337" src="https://www.youtube-nocookie.com/embed/VzELimhokkQ?modestbranding=1&rel=0&autohide=1&showinfo=0&controls=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="GROW"></iframe>
+        </div>
     </div>
     <p>&nbsp;</p>
     @if (Model.IsBeforeContest)
