--- a/Grow.Server/wwwroot/css/frontend.css
+++ b/Grow.Server/wwwroot/css/frontend.css
@@ -1654,34 +1654,22 @@ input[type="reset"],
   padding: 6em 0;
   text-align: center;
   min-height: 100vh; }
-  #banner .inner {
-    -moz-animation: reveal-banner 1s 0.25s ease-in-out;
-    -webkit-animation: reveal-banner 1s 0.25s ease-in-out;
-    -ms-animation: reveal-banner 1s 0.25s ease-in-out;
-    animation: reveal-banner 1s 0.25s ease-in-out;
-    -moz-animation-fill-mode: forwards;
-    -webkit-animation-fill-mode: forwards;
-    -ms-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
-    background: rgba(179, 25, 24, 0.8);
-    color: #fff;
-    display: inline-block;
-    opacity: 0;
-    padding: 3em;
-    text-align: center; }
-    #banner .inner h2 {
-      padding: 0;
-      margin: 0; }
-    #banner .inner header {
-      display: inline-block; }
-    #banner .inner img {
-      width: 350px;
-      max-width: 85vw; }
-    #banner .inner p {
-      letter-spacing: 0.1em;
-      font-size: 80%;
-      margin: 0;
-      text-transform: uppercase; }
+  #banner #inner {
+    width: 550px;
+    max-width: 95vw;
+    margin-left: auto;
+    margin-right: auto; }
+    #banner #inner .video-wrapper {
+      width: 100%;
+      height: 0;
+      padding-top: 56.25%;
+      position: relative; }
+      #banner #inner .video-wrapper iframe {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0; }
 
 /* Main */
 #main {
