--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -275,6 +275,24 @@
         </div>
     </section>
 
+    <section class="wrapper style3 container special" style="margin-top: 100px">
+        <header class="major">
+            <h2>Our <strong>Patrons</strong></h2>
+        </header>
+        <div class="people">
+            <div>
+                <img src="/img/mentrup.png" alt="Dr. Frank Mentrup" />
+                <strong>Dr. Frank Mentrup</strong><br />
+                Mayor of Karlsruhe
+            </div>
+            <div>
+                <img src="/img/hirth.jpg" alt="Prof. Thomas Hirth" />
+                <strong>Prof. Dr. Thomas Hirth</strong><br />
+                Vice-President of KIT
+            </div>
+        </div>
+    </section>
+
     @if (Model.Partners.Any())
     {
         <section class="wrapper style1 container special">
