--- a/Grow.Server/Styles/frontend.scss
+++ b/Grow.Server/Styles/frontend.scss
@@ -1025,6 +1025,24 @@ input[type="reset"],
     }
 }
 
+.people {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    align-content: space-between;
+    flex-wrap: wrap;
+    position: relative;
+
+    img {
+        width: 100%;
+        height: 100%;
+        max-width: 250px;
+        max-height: 300px;
+        display: block;
+        margin: 0 0 15px;
+    }
+}
+
 /* Footer */
 
 #footer {
