Added support to backlink to partners when referenced (e.g. frontpage, event details, ...)

--- a/Grow.Server/Areas/Admin/Views/Partners/Delete.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Partners/Delete.cshtml
@@ -29,6 +29,14 @@
         </tr>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.WebsiteUrl)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.WebsiteUrl)
+            </td>
+        </tr>
+        <tr>
+            <th>
                 @Html.DisplayNameFor(model => model.ImageId)
             </th>
             <td>
