--- a/Grow.Server/Areas/Admin/Views/Partners/Edit.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Partners/Edit.cshtml
@@ -28,6 +28,11 @@
                 <span asp-validation-for="ImageId" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="WebsiteUrl" class="control-label"></label>
+                <input asp-for="WebsiteUrl" class="form-control" />
+                <span asp-validation-for="WebsiteUrl" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <div class="checkbox">
                     <label>
                         <input asp-for="IsAdvertised" /> Display as main partner on frontpage
