--- a/Grow.Server/Areas/Admin/Views/Partners/Details.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Partners/Details.cshtml
@@ -28,6 +28,14 @@
         </tr>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.WebsiteUrl)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.WebsiteUrl)
+            </td>
+        </tr>
+        <tr>
+            <th>
                 @Html.DisplayNameFor(model => model.ImageId)
             </th>
             <td>
