--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -239,14 +239,14 @@
         </p>
     </section>
 
-    <section id="newsletter">
+    <section id="newsletter" class="wrapper special">
         <header>
             <h2>Become a GROW fan</h2>
         </header>
-        <p>
+        <p style="max-width: 600px; margin-left: auto; margin-right: auto">
             Sign up to our GROW newsletter to get updates about the main events, the program and other important news.
         </p>
-        <p>
+        <p class="centered">
             @Html.ActionLink("Sign up", "Newsletter", "Home", null, new { @class = "button special" })
         </p>
     </section>
@@ -280,15 +280,19 @@
             <h2>Our <strong>Patrons</strong></h2>
         </header>
         <div class="people">
-            <div>
+            <div class="centered">
                 <img src="/img/mentrup.png" alt="Dr. Frank Mentrup" />
-                <strong>Dr. Frank Mentrup</strong><br />
-                Mayor of Karlsruhe
+                <p>
+                    <strong>Dr. Frank Mentrup</strong><br style="display: block;" />
+                    Mayor of Karlsruhe
+                </p>
             </div>
-            <div>
+            <div class="centered">
                 <img src="/img/hirth.jpg" alt="Prof. Thomas Hirth" />
-                <strong>Prof. Dr. Thomas Hirth</strong><br />
-                Vice-President of KIT
+                <p>
+                    <strong>Prof. Dr. Thomas Hirth</strong><br style="display: block;" />
+                    Vice-President of KIT
+                </p>
             </div>
         </div>
     </section>
