--- a/Grow.Server/wwwroot/css/frontend.css
+++ b/Grow.Server/wwwroot/css/frontend.css
@@ -1106,6 +1106,9 @@ hr {
   margin-bottom: 15px;
   margin-top: 10px; }
 
+.centered {
+  text-align: center; }
+
 input[disabled="disabled"], input.form-control[disabled="disabled"], input[readonly="readonly"], input.form-control[readonly="readonly"] {
   background-color: rgba(0, 0, 0, 0.05);
   font-style: italic; }
@@ -1715,7 +1718,6 @@ body.index #main {
   background-repeat: no-repeat, no-repeat, repeat, no-repeat;
   background-size: 25em, 25em, auto, cover;
   color: #fff;
-  padding: 5em;
   text-align: center; }
   #newsletter header {
     margin-bottom: 2em; }
@@ -1723,7 +1725,6 @@ body.index #main {
 /* Partners */
 .logos {
   display: flex;
-  margin: 60px 0;
   justify-content: space-evenly;
   align-items: center;
   align-content: space-between;
@@ -1744,8 +1745,6 @@ body.index #main {
   flex-wrap: wrap;
   position: relative; }
   .people img {
-    width: 100%;
-    height: 100%;
     max-width: 250px;
     max-height: 300px;
     display: block;
@@ -2125,8 +2124,6 @@ body.index #main {
   .wrapper {
     margin-bottom: 2.5em;
     padding: 2.25em 1.5em; }
-    .wrapper.special br {
-      display: none; }
     .wrapper.style1 {
       padding: 0 1.5em; }
     .wrapper.style2 {
