--- a/Grow.Server/Views/Home/Judges.cshtml
+++ b/Grow.Server/Views/Home/Judges.cshtml
@@ -13,8 +13,9 @@
         .image-block {
             display: inline-block;
             padding: 20px;
-            margin-right: -3px;
+            margin-right: -4px;
             margin-bottom: 30px;
+            vertical-align: middle;
         }
 
             .image-block img {
@@ -42,7 +43,7 @@
                 {
                     <div class="4u 12u(narrower) image-block">
                         <h3>@judge.Name</h3>
-                        <h4>@judge.Description</h4>
+                        <h4>@judge.JobTitle</h4>
                         <img src="@Html.PrintIfNonEmpty(judge.Image?.Url, "/img/icon/unknown.jpg")" />
                     </div>
                 }
