--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -94,7 +94,7 @@
     }
     else
     {
-        <h2>Support student entrepreneurship</h2>
+        <h2>From Student to Startup</h2>
     }
     <p>&nbsp;</p>
     <ul class="buttons">
