--- a/Grow.Server/Views/Account/Index.cshtml
+++ b/Grow.Server/Views/Account/Index.cshtml
@@ -19,12 +19,13 @@
 
                     <div class="form-group">
                         <label asp-for="Name"></label>
-                        <input asp-for="Name" class="form-control" readonly="readonly" />
+                        <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
                         <label asp-for="Email"></label>
-                        <input asp-for="Email" class="form-control" />
+                        <input asp-for="Email" class="form-control" readonly="readonly" />
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
 
@@ -41,7 +42,7 @@
                 </form>
             </div>
         </div>
-
+        <!--
         <div class="card bg-flat">
             <div class="card-header">
                 <h6>Settings</h6>
@@ -77,5 +78,6 @@
                 </form>
             </div>
         </div>
+        -->
     </div>
 </div>
