--- a/Grow.Server/Views/Shared/Partials/_TeamProfilePartial.cshtml
+++ b/Grow.Server/Views/Shared/Partials/_TeamProfilePartial.cshtml
@@ -6,7 +6,12 @@
     </div>
     <div class="card-body">
         <div class="author">
-            <a href="@Url.Action("Teams", "Home", new { area = "", year = Model.Contest?.Year })#@Model.Id" target="_blank">
+            @{ 
+                var url = Model.Contest == null
+                    ? Url.Action("Teams", "Home", new { area = "" })
+                    : Url.Action("Teams", "Home", new { area = "", year = Model.Contest.Year });
+            }
+            <a href="@url#@Model.Id" target="_blank" title="Click to view public profile">
                 <img class="avatar border-gray" src="@Model.LogoImageUrl" alt="Team Logo">
                 <h5 class="title">@Model.Name</h5>
             </a>
@@ -50,7 +55,7 @@
                     <h5>
                         @if (!string.IsNullOrEmpty(Model.InstagramUrl))
                         {
-                            <a href="https://www.facebook.com/@Model.InstagramUrl" target="_blank">
+                            <a href="https://www.instagram.com/@Model.InstagramUrl" target="_blank">
                                 <img src="/img/icon/insta.png" />
                             </a>
                         }
