Improved some scaling and white-space wrapping issues in the team backend

--- a/Grow.Server/Areas/MyTeam/Views/Events/Index.cshtml
+++ b/Grow.Server/Areas/MyTeam/Views/Events/Index.cshtml
@@ -60,9 +60,7 @@
                 </div>
                 <hr />
                 <div class="card-body row">
-                    <div class="col-md-12">
-                        @evnt.Description
-                    </div>
+                    <div class="col-md-12 include-newline">@evnt.Description</div>
                 </div>
                 <hr />
                 <div class="card-footer row text-center">
