--- a/Grow.Server/Areas/MyTeam/Views/Home/Index.cshtml
+++ b/Grow.Server/Areas/MyTeam/Views/Home/Index.cshtml
@@ -7,10 +7,10 @@
 
 <form method="post" enctype="multipart/form-data">
     <div class="row">
-        <div class="col-md-4 col-xl-3">
+        <div class="col-sm-8 offset-sm-2 col-lg-6 offset-lg-3 offset-xl-0 col-xl-3">
             <partial name="Partials/_TeamProfilePartial" model="Model.MyTeam" />
         </div>
-        <div class="col-md-8 col-xl-9">
+        <div class="col-lg-12 col-xl-9">
             <div class="card card-user">
                 <div class="card-header">
                     <h5 class="card-title">Next events</h5>
