--- a/Grow.Server/Areas/Admin/Views/Events/Delete.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Events/Delete.cshtml
@@ -23,9 +23,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
-            <td>
-                @Html.DisplayFor(model => model.Description)
-            </td>
+            <td class="include-newline">@Html.DisplayFor(model => model.Description)</td>
         </tr>
         <tr>
             <th>
